Add Correct Name for Incrementing Counter project name

--- a/projects.json
+++ b/projects.json
@@ -56,7 +56,7 @@
     "imgType": "png"
   },
   {
-    "projectName": "incrementing Counter",
+    "projectName": "Incrementing Counter",
     "imgType": "png"
   },
   {
