Add Password Generator to JSON document

--- a/projects.json
+++ b/projects.json
@@ -118,6 +118,10 @@
   {
     "projectName": "Auto Text Effect",
     "imgType": "gif"
+  },
+  {
+    "projectName": "Password Generator",
+    "imgType": "png"
   }
 ]
 
