--- a/projects.json
+++ b/projects.json
@@ -122,6 +122,10 @@
   {
     "projectName": "Password Generator",
     "imgType": "png"
+  },
+  {
+    "projectName": "Good Cheap Fast",
+    "imgType": "png"
   }
 ]
 
