Add Notes App project to projects.json

--- a/projects.json
+++ b/projects.json
@@ -126,6 +126,10 @@
   {
     "projectName": "Good Cheap Fast",
     "imgType": "png"
+  },
+  {
+    "projectName": "Notes App",
+    "imgType": "png"
   }
 ]
 
