Add Animation Countdown project to projects.json

--- a/projects.json
+++ b/projects.json
@@ -130,6 +130,10 @@
   {
     "projectName": "Notes App",
     "imgType": "png"
+  },
+  {
+    "projectName": "Animation Countdown",
+    "imgType": "gif"
   }
 ]
 
