Add Image Carousel project to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -134,6 +134,10 @@
   {
     "projectName": "Animation Countdown",
     "imgType": "gif"
+  },
+  {
+    "projectName": "Image Carousel",
+    "imgType": "gif"
   }
 ]
 
