Add Hoverboard project to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -138,6 +138,10 @@
   {
     "projectName": "Image Carousel",
     "imgType": "gif"
+  },
+  {
+    "projectName": "Hoverboard",
+    "imgType": "gif"
   }
 ]
 
