Add Pokedex project to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -142,6 +142,10 @@
   {
     "projectName": "Hoverboard",
     "imgType": "gif"
+  },
+  {
+    "projectName": "Pokedex",
+    "imgType": "png"
   }
 ]
 
