Add Mobile tab navigation project to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -146,6 +146,10 @@
   {
     "projectName": "Pokedex",
     "imgType": "png"
+  },
+  {
+    "projectName": "Mobile Tab Navigation",
+    "imgType": "png"
   }
 ]
 
