Add Password Strength Background to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -150,6 +150,10 @@
   {
     "projectName": "Mobile Tab Navigation",
     "imgType": "png"
+  },
+  {
+    "projectName": "Password Strength Background",
+    "imgType": "png"
   }
 ]
 
