Add 3D Background Boxes project to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -154,6 +154,10 @@
   {
     "projectName": "Password Strength Background",
     "imgType": "png"
+  },
+  {
+    "projectName": "3D Background Boxes",
+    "imgType": "gif"
   }
 ]
 
