Add Verify Account Ui to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -158,6 +158,10 @@
   {
     "projectName": "3D Background Boxes",
     "imgType": "gif"
+  },
+  {
+    "projectName": "Verify Account Ui",
+    "imgType": "png"
   }
 ]
 
