--- a/projects.json
+++ b/projects.json
@@ -162,6 +162,10 @@
   {
     "projectName": "Verify Account Ui",
     "imgType": "png"
+  },
+  {
+    "projectName": "Live User Filter",
+    "imgType": "png"
   }
 ]
 
