Add Feedback Ui Design to project.json document

--- a/projects.json
+++ b/projects.json
@@ -166,6 +166,10 @@
   {
     "projectName": "Live User Filter",
     "imgType": "png"
+  },
+  {
+    "projectName": "Feedback Ui Design",
+    "imgType": "png"
   }
 ]
 
