Add Custom Range Slider to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -170,6 +170,10 @@
   {
     "projectName": "Feedback Ui Design",
     "imgType": "png"
+  },
+  {
+    "projectName": "Custom Range Slider",
+    "imgType": "png"
   }
 ]
 
