Add Netflix Mobile Navigation to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -174,6 +174,10 @@
   {
     "projectName": "Custom Range Slider",
     "imgType": "png"
+  },
+  {
+    "projectName": "Netflix Mobile Navigation",
+    "imgType": "png"
   }
 ]
 
