Add Quiz app to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -178,6 +178,10 @@
   {
     "projectName": "Netflix Mobile Navigation",
     "imgType": "png"
+  },
+  {
+    "projectName": "Quiz App",
+    "imgType": "png"
   }
 ]
 
