Add Testimonial Box Switcher to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -182,6 +182,10 @@
   {
     "projectName": "Quiz App",
     "imgType": "png"
+  },
+  {
+    "projectName": "Testimonial Box Switcher",
+    "imgType": "png"
   }
 ]
 
