Add Random Image Feed to project.json document

--- a/projects.json
+++ b/projects.json
@@ -186,6 +186,10 @@
   {
     "projectName": "Testimonial Box Switcher",
     "imgType": "png"
+  },
+  {
+    "projectName": "Random Image Feed",
+    "imgType": "png"
   }
 ]
 
