Add Todo List to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -190,6 +190,10 @@
   {
     "projectName": "Random Image Feed",
     "imgType": "png"
+  },
+  {
+    "projectName": "Todo List",
+    "imgType": "png"
   }
 ]
 
