Add Catch Insect Game to projects.json document

--- a/projects.json
+++ b/projects.json
@@ -194,6 +194,10 @@
   {
     "projectName": "Todo List",
     "imgType": "png"
+  },
+  {
+    "projectName": "Insect Catch Game",
+    "imgType": "png"
   }
 ]
 
